--- a/src/components/acmp/el-acmp/el-acmp2.html
+++ b/src/components/acmp/el-acmp/el-acmp2.html
@@ -15,5 +15,27 @@
 
 <details>
   <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
 
+using namespace std;
+
+int main() {
+  int n; // от -10000 до +10000
+  cin >> n;
+
+  int sum = 0; // сумма чисел между 1 и n
+  if (n > 1) {
+    for (int i = 1; i &lt;= n; i++) {
+      sum += i;
+    }
+  } else {
+    for (int i = n; i &lt;= 1; i++) {
+      sum += i;
+    }
+  }
+
+  cout &lt;&lt; sum;
+}
+</pre>
 </details>
