--- a/src/components/acmp/el-acmp/el-acmp3.html
+++ b/src/components/acmp/el-acmp/el-acmp3.html
@@ -23,5 +23,16 @@
 
 <details>
   <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
 
+using namespace std;
+
+int main() {
+  long long a;
+  cin >> a;
+
+  cout &lt;&lt; a * a;
+}
+</pre>
 </details>
