--- a/src/components/acmp/el-acmp/el-acmp4.html
+++ b/src/components/acmp/el-acmp/el-acmp4.html
@@ -23,5 +23,18 @@
 
 <details>
   <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
 
+using namespace std;
+
+int main() {
+  int n; // цифра от 0 до 9
+  cin >> n;
+
+  int res = n * 100 + 90 + 9 - n;
+
+  cout &lt;&lt; res;
+}
+</pre>
 </details>
