--- a/src/components/acmp/tasks/pages/elem-tasks1-50.html
+++ b/src/components/acmp/tasks/pages/elem-tasks1-50.html
@@ -47,23 +47,23 @@
       <tr>
         <td>4</td>
         <td><a href="#t4">Игра</a></td>
-        <td></td>
+        <td>Задачи для начинающих</td>
         <td>4%</td>
-        <td></td>
+        <td>+</td>
       </tr>
 
       <tr>
         <td>5</td>
         <td><a href="#t5">Статистика</a></td>
-        <td></td>
+        <td>Сортировка и последовательности</td>
         <td>15%</td>
-        <td></td>
+        <td>+</td>
       </tr>
 
       <tr>
         <td>6</td>
         <td><a href="#t6">Шахматы</a></td>
-        <td></td>
+        <td>Целочисленная арифметика</td>
         <td>23%</td>
         <td></td>
       </tr>
@@ -71,7 +71,7 @@
       <tr>
         <td>7</td>
         <td><a href="#t7">Золото племени АББА</a></td>
-        <td></td>
+        <td>Длинная арифметика</td>
         <td>30%</td>
         <td></td>
       </tr>
@@ -79,7 +79,7 @@
       <tr>
         <td>8</td>
         <td><a href="#t8">Арифметика</a></td>
-        <td></td>
+        <td>Задачи для начинающих</td>
         <td>5%</td>
         <td></td>
       </tr>
@@ -87,7 +87,7 @@
       <tr>
         <td>9</td>
         <td><a href="#t9">Домашнее задание</a></td>
-        <td></td>
+        <td>Сортировка и последовательности</td>
         <td>27%</td>
         <td></td>
       </tr>
@@ -95,7 +95,7 @@
       <tr>
         <td>10</td>
         <td><a href="#t10">Уравнение</a></td>
-        <td></td>
+        <td>Простая математика</td>
         <td>17%</td>
         <td></td>
       </tr>
@@ -103,7 +103,7 @@
       <tr>
         <td>11</td>
         <td><a href="#t11">Зайчик</a></td>
-        <td></td>
+        <td>Динамическое программирование</td>
         <td>55%</td>
         <td></td>
       </tr>
@@ -111,7 +111,7 @@
       <tr>
         <td>12</td>
         <td><a href="#t12">Дачники</a></td>
-        <td></td>
+        <td>Геометрия</td>
         <td>45%</td>
         <td></td>
       </tr>
@@ -119,7 +119,7 @@
       <tr>
         <td>13</td>
         <td><a href="#t13">Быки и коровы</a></td>
-        <td></td>
+        <td>Разбор строк</td>
         <td>20%</td>
         <td></td>
       </tr>
@@ -127,7 +127,7 @@
       <tr>
         <td>14</td>
         <td><a href="#t14">НОК</a></td>
-        <td></td>
+        <td>Целочисленная арифметика</td>
         <td>19%</td>
         <td></td>
       </tr>
@@ -135,7 +135,7 @@
       <tr>
         <td>15</td>
         <td><a href="#t15">Дороги</a></td>
-        <td></td>
+        <td>Теория графов</td>
         <td>18%</td>
         <td></td>
       </tr>
@@ -143,7 +143,7 @@
       <tr>
         <td>16</td>
         <td><a href="#t16">Лесенка</a></td>
-        <td></td>
+        <td>Рекурсия, перебор</td>
         <td>45%</td>
         <td></td>
       </tr>
@@ -151,7 +151,7 @@
       <tr>
         <td>17</td>
         <td><a href="#t17">Поле чудес</a></td>
-        <td></td>
+        <td>Сортировка и последовательности</td>
         <td>31%</td>
         <td></td>
       </tr>
@@ -159,7 +159,7 @@
       <tr>
         <td>18</td>
         <td><a href="#t18">Факториал</a></td>
-        <td></td>
+        <td>Длинная арифметика</td>
         <td>42%</td>
         <td></td>
       </tr>
@@ -167,7 +167,7 @@
       <tr>
         <td>19</td>
         <td><a href="#t19">Ферзь, ладья и конь</a></td>
-        <td></td>
+        <td>Простая математика</td>
         <td>29%</td>
         <td></td>
       </tr>
@@ -175,7 +175,7 @@
       <tr>
         <td>20</td>
         <td><a href="#t20">Пилообразная последовательность</a></td>
-        <td></td>
+        <td>Сортировка и последовательности</td>
         <td>38%</td>
         <td></td>
       </tr>
@@ -240,7 +240,7 @@
   <div class="anchor" id="t6"></div>
   <h3>Задача 6. Шахматы</h3>
 
-  <div class="t4"></div>
+  <div class="t6"></div>
 
 </article>
 
