--- a/src/components/acmp/el-acmp/el-acmp29.html
+++ b/src/components/acmp/el-acmp/el-acmp29.html
@@ -29,5 +29,50 @@
 
 <details>
   <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+#include &lt;cmath&gt;
 
+using namespace std;
+
+int main() {
+  int n; // число платформ
+  cin >> n;
+  vector&lt;int&gt; A(n);
+  for (int i = 0; i &lt; n; i++) {
+      cin >> A[i]; // высота i-ой платформы
+  }
+
+  long long energy = 0; // затрачено энергии
+  int cur = 0; // текущая платформа
+
+  // будем выбирать минимальную энергию
+  // между двумя способами
+  // en1 прыжок на соседние платформы
+  // en2 прыжок через одну платформу
+  int en1 = 0;
+  int en2 = 0;
+
+  while (cur &lt; n - 2) {
+      en1 = abs(A[cur + 1] - A[cur]) + abs(A[cur + 2] - A[cur + 1]);
+      en2 = 3 * abs(A[cur + 2] - A[cur]);
+      if (en2 > en1) {
+          energy += abs(A[cur + 1] - A[cur]);
+          cur = cur + 1;
+      }
+      else {
+          energy += en2;
+          cur = cur + 2;
+      }
+  }
+
+  // если последний прыжок был на соседнюю платформу
+  if (cur == n - 2) {
+      energy += abs(A[cur + 1] - A[cur]);
+  }
+
+  cout &lt;&lt; energy;
+}
+</pre>
 </details>
